<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/nav_activity"
        android:title="@string/activity"
        android:icon="@drawable/ic_activity"
        />

    <item
        android:id="@+id/nav_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_gallery"
        />

    <item
        android:id="@+id/nav_fav"
        android:title="@string/fav"
        android:icon="@drawable/ic_fav"
        />

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />

</menu>